--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "clearbit": "^1.3.5",
     "clearbit-logo": "^0.0.1",
     "cors": "^2.8.5",
