--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "start": "^5.1.0",
     "validator": "^13.11.0"
   }
 }
